--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1>This is our page</h1>
+    <div id="main">
+      <h2>mains</h2>
+    </div>
+    <div id="sidebar">
+      <h2> desserts</h2>
+      <h2>snacks </h2>
+      </div>
   </body>
 </html>
