--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
   </head>
   <body>
     <h1>This is our page</h1>
+    <div id="container">
     <div id="main">
       <h2>mains</h2>
+      <ul>
+        <li>Chicken</li>
+        <li>Noodles</li>
+      </ul>
     </div>
     <div id="sidebar">
       <h2> desserts</h2>
+      <ul>
+        <li>Ice cream</li>
+        <li>Tiramisu</li>
+      </ul>
       <h2>snacks </h2>
+      <ul>
+         <li>Chips</li>
+         <li>Sour Patch Kids</li>
+      </ul>
       </div>
   </body>
 </html>
