--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>This is our page</h1>
+    <h1>Yash's Grand Restaurant</h1>
     <div id="container">
     <div id="main">
       <h2>mains</h2>
